<resources>
    <string name="app_name">My Application</string>
    <string name="login">LOGIN</string>
    <string name="label_username">Username</string>
    <string name="label_username_hint">Name</string>
    <string name="label_user_password">User Password</string>
    <string name="label_user_password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_my_shoe_store">WELCOME TO MY SHOE STORE</string>
    <string name="the_best_shop_online">The best shop online ;)</string>
    <string name="next_instructions">Next</string>
    <string name="instruction_one">To add a new show please follow</string>
    <string name="instructionTwo">Fill in all the blank space to add a new one</string>
    <string name="instruction3">Visualize the available shoes</string>
    <string name="add_shoe">Add shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
</resources>