<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="shoemodel"
            type="com.example.shoestore.model.ShoeListViewModel" />

    </data>

    <!-- Used ConstraintLayout here because it was kind of mandatory
        and it is better at placing elements in the ui. Also, it provides
        responsive layout. Besides, this fragment provides lookalike
        components from others fragments within the project -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context="com.example.shoestore.newshoe.AddShoeFragment">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoemodel.shoeName}"
                android:hint="@string/shoe_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoemodel.shoeSize}"
                android:hint="@string/size"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_size">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_companyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company"
                android:text="@={shoemodel.shoeCompany}"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoemodel.shoeDescription}"
                android:hint="@string/description"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel_button"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintStart_toEndOf="@id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textAllCaps="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>