<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instruction_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context="com.example.shoestore.screens.instruction.InstructionFragment">

        <TextView
            android:id="@+id/instructionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_one"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />


        <TextView
            android:id="@+id/instructionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/instructionTwo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/instructionOne"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="@+id/instructionOne"
            app:layout_constraintTop_toBottomOf="@+id/instructionOne" />

        <Button
            android:id="@+id/buttonInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/next_instructions"
            app:layout_constraintEnd_toEndOf="@+id/instructionTwo"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/instructionTwo"
            app:layout_constraintTop_toBottomOf="@+id/instructionTwo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>